--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "name": "react-admin-dashboard",
     "version": "0.1.0",
-    "private": true,
-    "homepage": "https://llorentegerman.github.io/react-admin-dashboard",
+    "private": false,
     "dependencies": {
         "@material-ui/icons": "^4.11.2",
         "chart.js": "^3.5.1",
